change main background picture and being working on making products area align correctly

--- a/style.css
+++ b/style.css
@@ -7,11 +7,9 @@
     height: 800px;
 }
 #welcome .image-box {
-    background-image: url(/assets/images/quad.jpg);
-    background-position-x: 5em;
-    background-position-y: -2em;
+    background-image: url(/assets/images/quad.png);
+    background-position-y: 45%;
     background-size: cover;
-    transform: scale(1.1);
     height: 800px;
     position: relative;
 }
@@ -19,31 +17,24 @@
     position: absolute;
     top: 50px;
     width: 100%;
+    height: 800px;
     padding: 5% 0;
     font-weight: bolder;
 }
 #welcome .text-area {
-    width: 35%;
+    width: 30em;
 }
 #welcome .content .title {
     font-size: 3em;
 }
 
-#olafc .columns {
-    height: 100%;
-}
-#olafc .horizontal-center {
-    justify-content: flex-end;
-}
-#olafc img {
-    width: 70%;
+#product-area {
+    display: flex;
+    justify-content: center;
 }
 
-#vtxassassin .horizontal-center {
-    justify-content: start;
-}
-#vtxassassin img {
-    width: 60%;
+#olafc .columns {
+    height: 100%;
 }
 
 #welcome .container,
